--- a/public/src/css/controls.css
+++ b/public/src/css/controls.css
@@ -3,6 +3,7 @@
   height: 100px;
   left: 20px;
   bottom: 20px;
+  background-color: rgba(255, 255, 255, 0.336);
   display: none;
 }
 
@@ -10,6 +11,7 @@
   width: 60px;
   height: 60px;
   transform: translate( 32%, 32%);
+  background-color: rgba(0, 0, 0, 0.473);
 }
 
 @media (max-width: 900px) {
