--- a/public/src/css/index.css
+++ b/public/src/css/index.css
@@ -8,11 +8,6 @@
   text-shadow: 0 0 10px #0400ff;
 }
 
-.auxReference {
-  width: 100vw;
-  height: 100vh;
-}
-
 .fill-screen {
   top: 0;
   left: 0;
@@ -32,7 +27,8 @@
   border-radius: 5px;
   width: 90%;
   max-width: 1600px;
-  max-height: 80%;
+  height: 80%;
+  max-height: 800px;
   overflow-y: scroll;
   box-shadow: 0 0 2px 1px #0250f7;
 }
@@ -46,15 +42,15 @@
   display: none;
 }
 
-@media (min-height: 900px) {
-  .second-info-container {
-    max-height: 300px;
+@media (max-width: 899px) {
+  .firts-info-container {
+    padding-top: 0;
   }
-}
-
-@media (max-height: 899px) {
   .second-info-container {
-    max-height: auto;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    max-height: 100vh;
   }
 }
 
